--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile "org.jetbrains.anko:anko:0.10.4"
     compile "org.jetbrains.anko:anko-design:0.10.4"
     compile 'com.android.support:design:26.1.0'
+    compile "org.jetbrains.anko:anko-sqlite:0.10.4"
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
