Dates view aditions

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="MainActivity"
+            android:name=".MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,12 +19,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="ScheduleActivity"
-            android:screenOrientation="landscape"/>
-        <activity android:name="NotepadActivity"
-            android:windowSoftInputMode="stateVisible|adjustPan"/>
-        <activity android:name=".DatesActivity"
-            android:windowSoftInputMode="stateVisible|adjustPan"/>
+        <activity
+            android:name=".ScheduleActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".NotepadActivity"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustResize" />
+        <activity
+            android:name=".DatesActivity"
+            android:windowSoftInputMode="stateVisible|adjustPan" />
     </application>
 
 </manifest>
